<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        app:srcCompat="@drawable/horton_logo"
        android:contentDescription="@string/todo" />


    <EditText
        android:id="@+id/login_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/login_mail_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_mail"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/top_margin_login_buttons"/>

    <ProgressBar
        android:id="@+id/sign_up_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password"
        android:layout_marginVertical="20dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/create_new_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/back_to_login"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryLight"
        android:text="@string/create_new_account"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/back_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorAccent"
        android:text="@string/back_to_login_screen"
        android:textColor="@color/white" />

</RelativeLayout>