<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_login"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        app:srcCompat="@drawable/horton_logo"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/login_mail_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/top_margin_login_buttons"/>

    <ProgressBar
        android:id="@+id/login_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password"
        android:layout_marginVertical="10dp"
        android:visibility="invisible"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/sign_up_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:gravity="end"
        android:padding="10dp"
        android:text="@string/registration_button"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_button"
        android:foregroundGravity="center_vertical|center"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/login_button"
        android:textColor="@color/white" />

</RelativeLayout>