<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragment_home"
    tools:context=".fragments.HomeFragment">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/total_customers_card"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="top"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="5dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:id="@+id/total_customers_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/total_customers_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/total_customers"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/total_customers_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:text="@string/no_data" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/average_product_price_card"
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="5dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:id="@+id/average_product_price_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/average_product_price_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/average_product_price"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                />

            <TextView
                android:id="@+id/average_product_price_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="10dp"
                android:gravity="center_vertical"
                android:text="@string/no_data" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/percent_paying_users_card"
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="5dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:id="@+id/percent_paying_users_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/percent_paying_users_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/paying_customers"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:gravity="center_vertical"
                />

            <TextView
                android:id="@+id/percent_paying_users_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="10dp"
                android:gravity="center_vertical"
                android:text="@string/no_data" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/total_reviews_card"
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="5dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:id="@+id/total_reviews_card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/total_reviews_card_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paying_customers"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:gravity="center_vertical"
                />
            <LinearLayout
                android:id="@+id/rating_5_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:rating="5"
                    style="@style/Widget.MaterialRatingBar.RatingBar.Small" />

                <TextView
                    android:id="@+id/rating_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="-2dp"
                    android:text="@string/no_data"
                    />


            </LinearLayout>
            <LinearLayout
                android:id="@+id/rating_4_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:rating="4"
                    style="@style/Widget.MaterialRatingBar.RatingBar.Small" />

                <TextView
                    android:id="@+id/rating_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="-2dp"
                    android:text="@string/no_data"
                    />


            </LinearLayout>
            <LinearLayout
                android:id="@+id/rating_3_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:rating="3"
                    style="@style/Widget.MaterialRatingBar.RatingBar.Small" />

                <TextView
                    android:id="@+id/rating_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="-2dp"
                    android:text="@string/no_data"
                    />


            </LinearLayout>
            <LinearLayout
                android:id="@+id/rating_2_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:rating="2"
                    style="@style/Widget.MaterialRatingBar.RatingBar.Small" />

                <TextView
                    android:id="@+id/rating_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="-2dp"
                    android:text="@string/no_data"
                    />


            </LinearLayout>
            <LinearLayout
                android:id="@+id/rating_1_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:rating="1"
                    style="@style/Widget.MaterialRatingBar.RatingBar.Small" />

                <TextView
                    android:id="@+id/rating_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="-2dp"
                    android:text="@string/no_data"
                    />


            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>